# logosV3

./: .dockerignore  .gitignore  BANNER_AND_ROLE_REFACTOR.md  CLAUDE.md  Cargo.toml  DECtalk.conf  Dockerfile  README.md  SHOP_PLAN.md  build.rs  data.json
src/: commands.rs  dectalk.rs  framework.rs  handlers.rs  logging.rs  main.rs  mimic_db.rs  setup.rs  tts_dectalk.rs  types.rs  utils.rs
src/commands/: mimic.rs  mod.rs  oot.rs  vox.rs
src/commands/mimic/: delete.rs  mod.rs  set.rs
src/commands/profile/: mod.rs  set.rs  unset.rs
src/commands/schedule/: mod.rs
src/commands/shop/: buy.rs  gift.rs  mod.rs
src/pawthos/: mod.rs
src/pawthos/consts/: mod.rs
src/pawthos/enums/: color_errors.rs  embed_type.rs  inventory_errors.rs  logos_errors.rs  mimic_errors.rs  mod.rs  pawthos_errors.rs  persistant_data.rs  persistent_data.rs  profile_errors.rs  schedule_errors.rs  wallet_errors.rs
src/pawthos/structs/: badge.rs  data.rs  inventory_user.rs  mimic.rs  mimic_db.rs  mimic_user.rs  mod.rs  profile_user.rs  schedule_db.rs  schedule_event.rs  schedule_user.rs  shop_catalog.rs  user.rs  user_db.rs  wallet_user.rs
src/pawthos/traits/: mod.rs
src/pawthos/types/: mod.rs
