[package]
name = "logosV3"
authors = ["Fizzy"]
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
poise = "0.6.1"
serde = "1.0.225"
simple_logger = "5.0.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
#pedantic = "warn"
