[package]
name = "logosV3"
authors = ["Fizzy"]
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
poise = { version = "0.6.1", features = ["cache"] }
serde = "1.0.225"
simple_logger = "5.0.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
hound = "3"                                                              # For WAV writing when only raw PCM is returned by the SDK
sled = "0.34"
parking_lot = "0.12.5"
serde_json = "1.0.145"
thiserror = "2.0.17"

[build-dependencies]
bindgen = "0.72.1"

[lints.clippy]
#pedantic = "warn"
